# xai-eval-blockchain-fraud

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.py
data/: README.md
docs/: installation.md  methodology.md  reproducing_paper.md
notebooks/: 00_setup_and_data_download.ipynb  01a_eda_elliptic.ipynb  01b_eda_ethereum.ipynb  02a_baselines_ml.ipynb  02b_baselines_gnn.ipynb  03a_xai_shap_lime.ipynb  03b_xai_gnn_explainers.ipynb  04_module1_fidelity.ipynb  05_module2_stability.ipynb  06_module3_bras.ipynb  07_exp_class_imbalance.ipynb  08_module4_llm_agents.ipynb  09_module4_ml_baseline.ipynb
src/xai_blockchain_framework/: __init__.py  config.py
src/xai_blockchain_framework/data/: __init__.py  download.py  elliptic.py  ethereum.py
src/xai_blockchain_framework/llm/: __init__.py  openrouter_client.py  parsers.py  prompts.py
src/xai_blockchain_framework/metrics/: __init__.py  bras.py  fidelity.py  gnn_fidelity.py  llm.py  stability.py
src/xai_blockchain_framework/models/: __init__.py  gnn.py  ml.py
src/xai_blockchain_framework/rules/: __init__.py  elliptic_rules.py  ethereum_rules.py
src/xai_blockchain_framework/utils/: __init__.py  io.py  normalization.py  sampling.py
src/xai_blockchain_framework/visualization/: __init__.py  bars.py  heatmaps.py  radars.py
src/xai_blockchain_framework/xai/: __init__.py  gnn_explainers.py  lime_wrapper.py  shap_wrapper.py
tests/: conftest.py  test_llm_parser.py  test_metrics_bras.py  test_metrics_fidelity.py  test_metrics_llm.py  test_metrics_stability.py  test_normalization.py  test_rules.py
